// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarItems > matches the snapshot 1`] = `
"<li class="sidebarItem">
  <!--v-if-->
  <!--v-if-->
</li>"
`;

exports[`SidebarItems > when items prop is set > matches the snapshot 1`] = `
"<li class="sidebarItem">
  <!--v-if-->
  <ul class="items">
    <li><a exactactiveclass="current" class="iconButton link link" title="title">
        <icon class="icon" aria-hidden="true" size="20" weight="duotone"></icon><span class="text">title</span>
      </a>
      <!--v-if-->
    </li>
    <li><a exactactiveclass="current" class="iconButton link link" title="title">
        <icon class="icon" aria-hidden="true" size="20" weight="duotone"></icon><span class="text">title</span>
      </a>
      <!--v-if-->
    </li>
    <li>
      <!--v-if-->
      <div data-test-id="item-component"></div>
    </li>
  </ul>
</li>"
`;

exports[`SidebarItems > when items prop is set > when collapsed value is true > matches the snapshot 1`] = `
"<li class="sidebarItem">
  <!--v-if-->
  <ul class="items">
    <li><a exactactiveclass="current" class="iconButton link link" title="title">
        <icon class="icon" aria-hidden="true" size="20" weight="duotone"></icon><span class="text visually-hidden">title</span>
      </a>
      <!--v-if-->
    </li>
    <li><a exactactiveclass="current" class="iconButton link link" title="title">
        <icon class="icon" aria-hidden="true" size="20" weight="duotone"></icon><span class="text visually-hidden">title</span>
      </a>
      <!--v-if-->
    </li>
    <li>
      <!--v-if-->
      <div data-test-id="item-component"></div>
    </li>
  </ul>
</li>"
`;

exports[`SidebarItems > when title prop is set to true > matches the snapshot 1`] = `
"<li class="sidebarItem"><a class="titleLink" title="title">
    <!--v-if-->
    <h4 class="title">title</h4>
  </a>
  <!--v-if-->
</li>"
`;
